# md-toc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml
docs/issues/: 001-headers-inside-fenced-code-blocks.md  002-duplicate-anchor-handling.md  003-stdin-binary-input.md
examples/: sample.md
src/md_toc/: __init__.py  cli.py  formatter.py  parser.py  slugify.py
tests/: test_formatter.py  test_parser.py  test_slugify.py
