[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-toc"
version = "0.1.0"
description = "Markdown 헤더에서 목차를 추출하는 작은 CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "KOI Open Source Course Contributors" }]
keywords = ["markdown", "toc", "cli", "education"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
md-toc = "md_toc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/md_toc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
